more updates to judge FE

--- a/lectures/19_judge_iv.tex
+++ b/lectures/19_judge_iv.tex
@@ -661,6 +661,24 @@
 \end{frame}
 
 
+\begin{frame}{What to do if test fails? (Frandsen et al.)}
+  \begin{columns}[onlytextwidth, T] % align columns
+    \begin{column}{.5\textwidth}
+      \begin{itemize}
+      \item If monotonicity fails in the strict sense, can we rescue the result?
+      \item 
+      \end{itemize}
+    \end{column}%
+    \hfill%
+    \begin{column}{.5\textwidth}
+      \includegraphics[width=\linewidth]{images/average_judge_iv1.pdf}\\
+      \includegraphics[width=\linewidth]{images/average_judge_iv2.pdf}\\
+      \includegraphics[width=\linewidth]{images/average_judge_iv3.pdf}
+    \end{column}%
+  \end{columns}
+\end{frame}
+
+
 \begin{frame}{Brief aside on inference}
   \begin{wideitemize}
   \item The many instruments field is still working on heteroskedasticty and complicated inference settings
