--- a/syllabus.tex
+++ b/syllabus.tex
@@ -68,7 +68,7 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 {\Large \textsc{MGMT 737: Applied Empirical Methods}}
 \end{center}
 \begin{center}
-Spring 2024
+Spring 2026
 \end{center}
 %\date{September 26, 2014}
 
@@ -77,7 +77,7 @@ Spring 2024
 \begin{minipage}[t]{.75\textwidth}
 \begin{tabular}{llccll}
 \textbf{Instructor:} & Paul Goldsmith-Pinkham & & &   \textbf{Time:} & TTh, 2:40-4pm  \\
-\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & \textbf{Location:} & Usually Evans Hall 2430, see Canvas for details
+\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & \textbf{Location:} & Evans Hall 4210
 \end{tabular}
 \end{minipage}
 \rule{6.5in}{0.4pt}
@@ -154,7 +154,7 @@ organizing these materials):
 \item Guidance on Data Visualization: \url{https://socviz.co/}
 \end{itemize}
 
-You are also very welcome (and encouraged) to use any and all large language model help when working on the problem sets! 
+You are also very welcome (and encouraged) to use any and all large language model help when working on the problem sets! However, an important caveat to this is that the purpose of these problem sets is for you to learn -- using the tool to finish the task is fine, but not when it replaces any struggle or effort on your part.  There will be a particular section on the problem set that is an AI-free-zone, where I will request that you do not use LLMs to give your responses. 
 
 \vskip.15in
 \noindent\textbf{Main References:} %\footnotemark
@@ -175,23 +175,26 @@ ECON 550, ECON 551
 \bigskip
 
 \textbf{Course Outline}
+Recommended reading is starred and in bold.
 \begin{enumerate}
 \item \underline{Causality, Statistics, and Economics}
   \begin{enumerate}
   \item Class 1: Potential Outcomes and Directed Acyclic Graphs
     \begin{itemize}
+              \item \textbf{``Potential Outcome and Directed Acyclic Graph Approaches to Causality: Relevance for Empirical Practice in Economics'', Imbens (2020)}$^{**}$
     \item Chapter 7, Aronow and Miller
     \item Chapter 1, Imbens and Rubin
     \item Chapter 3, Cunningham
     \item ``Structural vs. Reduced Form'' Language, Confusion and Models in Empirical Economics, Haile \url{http://www.econ.yale.edu/~pah29/intro.pdf}  (or on course website)
-    \item ``Models, Measurement, and the Language of Empirical Economics'', Haile \url{https://s3.amazonaws.com/file.paulgp.com/30d/haile.pdf
+    \item ``Models, Measurement, and the Language of Empirical Economics'', Haile \url{https://sites.google.com/view/philhaile/home/teaching
     }
     \item ``Statistics and Causal Inference'', Holland 1986
-    \item ``Potential Outcome and Directed Acyclic Graph Approaches to Causality: Relevance for Empirical Practice in Economics'', Imbens (2020)
+
     \item ``The Identification Zoo: Meanings of Identification in Econometrics'', Lewbel, 2019
     \end{itemize}
   \item Class 2: Research Design, Randomization, and Model- vs. Design-Based Inference
     \begin{itemize}
+      \item \textbf{``The Credibility Revolution in Empirical Economics: How Better Research Design is Taking the Con out of Econometrics'', Angrist and Pischke (2010)}$^{**}$
     \item Chapter 3+4, Imbens and Rubin      
     \item ``Causality and design-based inference'', Bowers, J. \& Leavitt, T. (2020)
     \item ``Instruments, Randomization, and
@@ -199,10 +202,11 @@ ECON 550, ECON 551
     \item ``Better LATE Than Nothing: Some Comments on Deaton (2009) and Heckman and Urzua (2009)'' Imbens (2010)
     \item ``Building Bridges between Structural and Program Evaluation Approaches to Evaluating Policy''
     \item ``Let's take the Con out of Econometrics'', Leamer (1983)
-    \item ``The Credibility Revolution in Empirical Economics: How Better Research Design is Taking the Con out of Econometrics'', Angrist and Pischke (2010)
     \end{itemize}
   \item Class 3: Propensity Scores
     \begin{itemize}
+      \item \textbf{LaLonde (1986) after Nearly Four Decades:
+Lessons Learned, Imbens and Xu (2024)}$^{**}$
     \item ``The central role of the propensity score in observational
       studies for causal effects'' Rosenbaum and Rubin (1983)
     \item ``Matching As An Econometric Evaluation Estimator'', Heckman, Ichimura, and Todd (1998)
@@ -215,6 +219,7 @@ ECON 550, ECON 551
     \end{itemize}
   \item Class 4: Interference, Spillovers and Dynamics
     \begin{itemize}
+      \item \textbf{``Toward Causal Inference With Interference'', Hudgens and Halloran (2008)}$^{**}$
     \item ``Identification of Endogenous Social Effects: The Reflection Problem'' Manski (1993)
     \item ``Social Networks and the Identification of Peer Effects'' Goldsmith-Pinkham and Imbens (2013)
     \item ``Identification of treatment response with social interactions'' Manski (2013)
@@ -229,6 +234,7 @@ ECON 550, ECON 551
   \begin{enumerate}
   \item Class 5: Inference
     \begin{itemize}
+      \item  \textbf{``When Should You Adjust Standard Errors for Clustering?'' Abadie et al. (2022)}$^{**}$
     \item ``Robust Standard Errors in Small Samples: Some Practical Advice.'' Imbens and Koles\'ar  (2016)
     \item ``GMM estimation with cross sectional dependence'' Conley (1999)
     \item ``The Standard Errors of Persistence'' Kelly (2019)
@@ -236,12 +242,11 @@ ECON 550, ECON 551
     \item ``Robust Inference with multiway clustering'' Cameron et al. (2011)
     \item ``Estimating standard errors in finance panel data sets: Comparing approaches'' Petersen (2009)
     \item  ``Sampling-based vs. Design-based Uncertainty in Regression Analysis.'' Abadie et al. (2019)
-    \item  ``When Should You Adjust Standard Errors for Clustering?'' Abadie et al. (2022)
     \item  ``Using Wasserstein Generative Adversarial Networks for the Design of Monte Carlo Simulations'' Athey et al.
     \end{itemize}
   \item Class 6: Semiparametrics and Visualization
     \begin{itemize}
-    \item ``On Binscatter'' Cattaneo et al. (2019)
+    \item \textbf{``On Binscatter'' Cattaneo et al. (2019)}$^{**}$
     \item ``Validation of Visual Statistical Inference, Applied to Linear Models'', Majumder, Hoffman and Cook (2014)
     \item ``Visual Inference and Graphical Representation in Regression Discontinuity Designs,'' Kortin, Lieberman, Matsudaira, and Shen (2020)
     \item ``Better Data Visualizations: A Guide for Scholars, Researchers, and Wonks'' Schwabish (2021)
@@ -462,7 +467,7 @@ ECON 550, ECON 551
 \vskip.15in
 \noindent\textbf{Class Policy:}  
 \begin{itemize}
-\item Regular attendance is not required, but is preferred. 
+\item Regular attendance is not required, but is preferred. If you plan to miss more than 3 classes, please consult with me.
 \end{itemize}
 
 \end{document} 
