Update lecture materials for improved clarity and content accuracy

--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -207,18 +207,19 @@
 \begin{column}{.9\textwidth}
   \begin{wideitemize}
   \item There are no exams, I will be assigning problem sets on a (quasi) weekly basis.
-  \item Since there is a very large number of students, I will be grading the problem sets automatically. I will be requiring the code in R so I can check the output automatically. 
+  \item Richard Archer is our TA
     \begin{itemize}
     \item See syllabus for details
     \end{itemize}
-  \item There are no required readings, but the papers listed in the syllabus are relevant to the material we will cover in class. I will post lecture notes after class on the material along with the class slides.
-  \item I also highly recommend the following texts:
+  \item There are no required readings, but there will be one \emph{highly encouraged} reading for each class. The remaining papers listed in the syllabus are relevant to the material we will cover in class. 
+  \begin{itemize}
+    \item I will post lecture notes after class on the material along with the class slides.
+  \end{itemize}  
+  \item I also highly recommend the following texts as supplement but not required:
     \begin{itemize}
     \item Angrist and  Pischke, Mostly Harmless Econometrics
     \item Hansen, Econometrics
-    \item Miller and Aronow, Foundations of Agnostic Statistics
-    \item Cunningham, Causal Inference: The Mixtape, https://mixtape.scunning.com/
-    \item Imbens and Rubin, Causal Inference for Statistics, Social, and Biomedical Sciences      
+      \item Others on syllabus...
     \end{itemize}
   \end{wideitemize}
 \end{column}%
@@ -265,7 +266,7 @@
 
 \begin{frame}{Important caveats (Part II)}
   \begin{columns}[T] % align columns
-  \begin{column}{.7\textwidth}
+  \begin{column}{.75\textwidth}
     \begin{wideitemize}
     \item The definition of being a good empirical researcher has expanded significantly
       \begin{itemize}
@@ -275,17 +276,21 @@
     \item Cost to do good coding and good coding practice has reduced \emph{dramatically} thanks to LLMs
       \begin{itemize}
         \item These LLMs will be useful as inputs to research, but also as technologies to improve your research
-        \item I would encourage you use Copilot in VS Code (or similar coding assistant) as well as various LLMs
+        \item I would encourage you use Copilot in VS Code (or similar coding assistant). 
+  \begin{itemize}
+    \item Agentic tools like Claude Code can also be useful, but be careful about automation
+  \end{itemize}       
         \item I will \emph{expect} that you can write good code now -- the bar has been raised because gravity is lower now!
       \end{itemize}
     \end{wideitemize}
-    \url{https://paulgp.com/2024/06/24/llm_talk.html}
+    \url{https://paulgp.com/2024/06/24/llm_talk.html}\\
+    \url{https://paulgp.com/ai-coding/2025/12/02/ai-coding.html}
   \end{column}%
   \hfill%
   \begin{column}{.28\textwidth}
     \makebox[\linewidth][c]{
       \resizebox{\linewidth}{!}{
-        \includegraphics{images/ollama.png}
+        \includegraphics{images/claude-ai-icon-65aa.png}
       }
     }
   \end{column}%
@@ -297,7 +302,7 @@
 \begin{frame}{Structure of the course}
   \begin{wideitemize}
   \item Six parts, first three are ``structure'' (12 lectures), second
-    three parts are on different ``bespoke'' methods (12 lectures)
+    three parts are on different ``bespoke'' methods (14 lectures)
   \item We will begin with an overview on the structure for causal inference
   \item N.B. I am keeping everything on the github repo and will
     update you via Canvas notifications!
