Refine explanations in 02_randomization.tex for clarity on randomized trials

--- a/lectures/02_randomization.tex
+++ b/lectures/02_randomization.tex
@@ -505,15 +505,14 @@
       $\mathbf{D}$ can take. It is defined by the type of randomize
       experiment one runs.
       \begin{itemize}
-      \item If we do a purely randomized individualized trial, where
-        each individual has a fair coin flipped on whether they are
+      \item If each individual has a fair coin flipped on whether they are
         treatment or control, then $\Omega = \{0,1\}^{n}$. But then
         the variation in number treated and control can vary quite a
         lot for small samples!
       \item Other ways to consider randomly assigning individuals
         \begin{itemize}
-        \item Random draws from an urn (to ensure an exact number treated)
-        \item Clustering individuals on characteristics (or location)
+        \item Random draws from an urn (to ensure an exact number treated) -- this is known as a \emph{completely randomized experiment} -- this is commonly used and convenient
+        \item Clustering individuals on characteristics (or location) -- this is known as a \emph{stratified randomized experiment}
         \end{itemize}
       \end{itemize}
     \end{wideitemize}
