Add new slide on growth in "Research Design" with NBER Working Papers image

--- a/lectures/02_randomization.tex
+++ b/lectures/02_randomization.tex
@@ -380,6 +380,13 @@
 \end{columns}
 \end{frame}
 
+
+\begin{frame}{Growth in ``Research Design'' in NBER Workin Papers}
+\includegraphics[width=\linewidth]{images/research_design_nberwp.png}
+\end{frame}
+
+
+
 \begin{frame}{David Card's definition of Research Design}
   \begin{wideitemize}
   \item Card draws a distinction between causality as ``model-based'' and ``design-based'':
